# django-activity-tracker

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
django_activity_tracker/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
docs/: api.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  models.py  serializers.py  test_models.py  test_serializers.py  test_urls.py  test_views.py  urls.py  views.py
usage/: index.html
